--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mutroduce
+spring.datasource.url=jdbc:mysql://localhost:3306/finalproject
 spring.datasource.username=root
 spring.datasource.password=1234
 # spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
