--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mvc.view.suffix=.jsp
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/final
+spring.datasource.url=jdbc:mysql://localhost:3306/mutroduce
 
 spring.datasource.username=root
 spring.datasource.password=1234
