--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mutroduce1
+spring.datasource.url=jdbc:mysql://localhost:3306/final
 
 spring.datasource.username=root
 spring.datasource.password=1234
